# shepherd

./: .gitignore  README.md  pyproject.toml  setup.py  shepherd.code-workspace
examples/: .gitignore
examples/example1/: program2.sh  shepherd-config.yaml  shepherd-config.yml
examples/example2/: action.sh  service.sh  shepherd-config.yaml  shepherd-config.yml
examples/example3/: cleanup.sh  program3.sh  run_test.sh  shepherd-config.yaml  shepherd-config.yml
examples/sade/: gen_shepherd_config_for_suas.py  sade-config.yaml  sade-wf.yaml  simple.sh  spawn_model.sh
shepherd/: _version.py  config_loader.py  log_monitor.py  logging_setup.py  main.py  program_executor.py  service_manager.py  shepherd.py  shepherd_viz.py
test/example1/: run_test.sh
test/example3/: cleanup.sh  shepherd-config.yml
