[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shepherd"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Shepherd - Service Orchestration and Monitoring Tool"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

dynamic = ["version", "scripts", "dependencies"]

[project.urls]
Homepage = "https://github.com/cooperative-computing-lab/shepherd"
Issues = "https://github.com/cooperative-computing-lab/shepherd/issues"
